--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>I'm [Your Name], an experienced IT professional with a passion for designing and developing enterprise applications. I have a strong background in Java, J2EE, Spring, and web services, and I excel at leading teams to successful project deliveries.</p>
+            <p>I'm Nitish Bangera, an experienced IT professional with a passion for designing and developing enterprise applications. I have a strong background in Java, J2EE, Spring, and web services, and I excel at leading teams to successful project deliveries.</p>
         </section>
 
         <section id="highlights">
