--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 [Your Name]</p>
+        <p>&copy; 2023 Nitish Bangera</p>
     </footer>
 </body>
 </html>
