--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>[Your Name]'s GitHub.io Profile</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My GitHub.io Profile</h1>
-        <p>Experienced IT Professional | Java Expert | Tech Leader</p>
+        <div class="header-content">
+            <h1>Nitish Bangera</h1>
+            <p>Experienced IT Professional | Java Expert | Tech Leader</p>
+        </div>
     </header>
+
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>I'm Nitish Bangera, an experienced IT professional with a passion for designing and developing enterprise applications. I have a strong background in Java, J2EE, Spring, and web services, and I excel at leading teams to successful project deliveries.</p>
+            <p>I'm an experienced IT professional with a passion for designing and developing enterprise applications. I have a strong background in Java, J2EE, Spring, and web services, and I excel at leading teams to successful project deliveries.</p>
         </section>
 
         <section id="highlights">
@@ -23,7 +27,7 @@
                 <li>Former Technical Architect at Sunseries Travel Technology, where I played a pivotal role in architecting travel scenarios.</li>
                 <li>Technical Architect at Zycus, responsible for modules like Flexiform, FieldLibrary, iRequest, and RuleManager.</li>
                 <li>Lead Software Engineer at Transerv, designing seamless payment checkouts and integrating payment gateways.</li>
-                <li>Manager at Morgan Stanley, overseeing modules related to REST and SOAP services, stock filtering, and Cplex optimization.</li>
+                <li>Manager at Morgan Stanley, overseeing modules involving REST and SOAP services, stock filtering, and Cplex optimization.</li>
                 <li>Software Engineer at Xoriant Solutions, working on projects like Egnyte Hybrid Cloud File Storage.</li>
                 <li>Contributed as a Technical Author for Baeldung.com, writing technical blogs on Core Java, Spring, and REST.</li>
             </ul>
