--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nitish Bangera's GitHub.io Profile</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -23,27 +24,27 @@
         <section id="highlights">
             <h2>Highlights</h2>
             <ul>
-                <li>Current Role: Technical Director at Bluebik Technology Center, specializing in Event-Driven Architecture.</li>
-                <li>Former Technical Architect at Sunseries Travel Technology, where I played a pivotal role in architecting travel scenarios.</li>
-                <li>Technical Architect at Zycus, responsible for modules like Flexiform, FieldLibrary, iRequest, and RuleManager.</li>
-                <li>Lead Software Engineer at Transerv, designing seamless payment checkouts and integrating payment gateways.</li>
-                <li>Manager at Morgan Stanley, overseeing modules involving REST and SOAP services, stock filtering, and Cplex optimization.</li>
-                <li>Software Engineer at Xoriant Solutions, working on projects like Egnyte Hybrid Cloud File Storage.</li>
-                <li>Contributed as a Technical Author for Baeldung.com, writing technical blogs on Core Java, Spring, and REST.</li>
+                <li><i class="fas fa-briefcase"></i> Current Role: Technical Director at Bluebik Technology Center, specializing in Event-Driven Architecture.</li>
+                <li><i class="fas fa-briefcase"></i> Former Technical Architect at Sunseries Travel Technology, where I played a pivotal role in architecting travel scenarios.</li>
+                <li><i class="fas fa-briefcase"></i> Technical Architect at Zycus, responsible for modules like Flexiform, FieldLibrary, iRequest, and RuleManager.</li>
+                <li><i class="fas fa-briefcase"></i> Lead Software Engineer at Transerv, designing seamless payment checkouts and integrating payment gateways.</li>
+                <li><i class="fas fa-briefcase"></i> Manager at Morgan Stanley, overseeing modules involving REST and SOAP services, stock filtering, and Cplex optimization.</li>
+                <li><i class="fas fa-briefcase"></i> Software Engineer at Xoriant Solutions, working on projects like Egnyte Hybrid Cloud File Storage.</li>
+                <li><i class="fas fa-book"></i> Contributed as a Technical Author for Baeldung.com, writing technical blogs on Core Java, Spring, and REST.</li>
             </ul>
         </section>
 
         <section id="education">
             <h2>Education</h2>
-            <p>Master of Technology in Computer Science and Engineering from NMAMIT Nitte, specializing in the implementation of The Shrinking Generator, The Stop & Go Generator, and The Alternating Generator.</p>
-            <p>Bachelor of Engineering in Information Technology from Fr.Agnel Institute of Technology.</p>
+            <p><i class="fas fa-graduation-cap"></i> Master of Technology in Computer Science and Engineering from NMAMIT Nitte, specializing in the implementation of The Shrinking Generator, The Stop & Go Generator, and The Alternating Generator.</p>
+            <p><i class="fas fa-graduation-cap"></i> Bachelor of Engineering in Information Technology from Fr.Agnel Institute of Technology.</p>
         </section>
 
         <section id="certifications">
             <h2>Certifications</h2>
             <ul>
-                <li>Sun Certified Java Programmer (SCJP 6)</li>
-                <li>M101J: MongoDB for Java Developers</li>
+                <li><i class="fas fa-certificate"></i> Sun Certified Java Programmer (SCJP 6)</li>
+                <li><i class="fas fa-certificate"></i> M101J: MongoDB for Java Developers</li>
             </ul>
         </section>
     </main>
